--- a/JavaScriptProj.html
+++ b/JavaScriptProj.html
@@ -2,6 +2,7 @@
 <head>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
@@ -10,8 +11,8 @@
       <div class="nav-wrapper">
         <a href="#!" class="brand-logo center">Lit Center</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#" onclick="getData()">Graphs</a></li>
-          <li><a href="#">Search</a></li>
+          <li><a href="#" onclick="initializeGraphs()">Graphs</a></li>
+          <li><a href="#" onclick="initializeSearch()">Search</a></li>
         </ul>
       </div>
     </nav>
@@ -32,5 +33,5 @@
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script type="text/javascript" src="javascripts/litCenterAPI.js"></script>
 <script type="text/javascript" src="javascripts/graphs.js"></script>
-
+<script type="text/javascript" src="javascripts/search.js"></script>
 </html>
